# sim_dfu

./: CMakeLists.txt  Kconfig.sysbuild  prj.conf  sysbuild.cmake  sysbuild.conf
boards/: nrf5340dk_nrf5340_cpuapp_ns.overlay
child_image/: CMakeLists.txt  prj.conf
child_image/src/: main.c
src/: main.c
sysbuild/: mcuboot.overlay
tkos_net/: CMakeLists.txt  Kconfig  README.rst  debug_overlay.conf  prj.conf
tkos_net/src/: main.c  synchn.c
tkos_net/src/timesync/: CMakeLists.txt  time_sync.h  time_sync_nrf53.c
